Detect open text Editor + Read all content from de file opened

--- a/jas-plus-editor/package.json
+++ b/jas-plus-editor/package.json
@@ -13,8 +13,8 @@
   "main": "./extension.js",
   "contributes": {
     "commands": [{
-      "command": "jas-plus-editor.helloWorld",
-      "title": "Hello World"
+      "command": "jas-plus-editor.as-bundler",
+      "title": "AS Bundler"
     }]
   },
   "scripts": {
