add icon of VsCode Extension

--- a/jas-plus-editor/package.json
+++ b/jas-plus-editor/package.json
@@ -2,6 +2,7 @@
   "name": "as-bundler-editor",
   "displayName": "AS Bundler",
   "description": "A resource bundle for VsCode. Makes it easy to manage all parameters into .properties files.",
+  "icon": "/images/asbundler-icon.png",
   "publisher": "ASBundler",
   "version": "0.0.3",
   "engines": {
