BUG Fix - Remove Empty space at the end of the line

--- a/jas-plus-editor/package.json
+++ b/jas-plus-editor/package.json
@@ -2,9 +2,9 @@
   "name": "as-bundler-editor",
   "displayName": "AS Bundler",
   "description": "A resource bundle for VsCode. Makes it easy to manage all parameters into .properties files.",
-  "icon": "/images/asbundler-icon.png",
+  "icon": "/images/icon-v2.png",
   "publisher": "ASBundler",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.84.0"
   },
